# MyAirSlam

./: .gitignore  CMakeLists.txt  README.md
configs/camera/: euroc.yaml  euroc_720_2.yaml
configs/relocalization/: reloc_euroc.yaml
configs/visual_odometry/: vo_euroc.yaml
debug/: relocalization.txt
demo/: relocalization.cpp
include/: map_user.h
launch/map_refinement/: mr_euroc copy.launch  mr_euroc.launch
launch/relocalization/: reloc_euroc copy.launch  reloc_euroc.launch  reloc_euroc_640.launch
launch/visual_odometry/: vo_euroc copy.launch  vo_euroc.launch
my_code/: factory.ply  my_output.ply  new_factory.ply  txt2ply.ipynb
my_code/joinMap/: CMakeLists.txt  cali.ipynb  dense.ipynb  depth_map.pgm  ffmepg.ipynb  gpt_stereo.ipynb  joinMap  joinMap copy.cpp  joinMap-1.cpp  joinMap.cpp  outPly.cpp  partition.py  ply_obj.ipynb  put_img.cpp  put_img.py  reloc_trajectory.py  rename.ipynb  replicate .py
output/: plnet_s1.engine  superpoint_v1_sim_int32.engine
src/: camera.cc  frame.cc  imu.cc  map_user.cc  ros_publisher.cc
src/g2o_optimization/: g2o_optimization.cc
